/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a commented-out sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/current/userguide/userguide.html
 */

// Apply the java plugin to add support for Java
plugins {
  id 'java'
  id 'application'
  id 'com.bmuschko.docker-java-application' version '9.4.0'
  id 'com.google.protobuf' version '0.9.4'
  id 'com.gradleup.shadow' version '9.4.1'
}

// Read versions from root versions.gradle (two levels up: cloudsimplus-gateway/build.gradle → repo root)
apply from: new File(rootDir, '../versions.gradle')

//https://stackoverflow.com/questions/29593500/how-can-i-set-the-compileoptions-for-my-gradle-java-plugin
tasks.withType(JavaCompile) {
    configure(options) {
        options.compilerArgs << '-Xlint:deprecation' << '-Xlint:unchecked' << '-Xdiags:verbose'
    }
}

test {
    useJUnitPlatform()
    // enable/disable system out messages on junit tests
    testLogging.showStandardStreams = System.getProperty('junit.output.show')?.trim()?.toBoolean() ?: false
    logger.lifecycle "showStandardStreams set to $testLogging.showStandardStreams"
}

// In this section you declare where to find the dependencies of your project
repositories {
    mavenCentral()
}

// Protobuf / gRPC configuration
protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:4.34.1'
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.80.0'
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

// In this section you declare the dependencies for your production and test code
dependencies {
    // The production code uses the SLF4J logging API at compile time
    implementation 'org.cloudsimplus:cloudsimplus:8.5.7'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.32'
    implementation 'org.apache.commons:commons-collections4:4.5.0'
    implementation 'com.google.code.gson:gson:2.13.1'
    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

    // gRPC
    implementation 'io.grpc:grpc-netty-shaded:1.80.0'
    implementation 'io.grpc:grpc-protobuf:1.80.0'
    implementation 'io.grpc:grpc-stub:1.80.0'
    implementation 'com.google.protobuf:protobuf-java:4.34.1'
    compileOnly 'org.apache.tomcat:annotations-api:6.0.53'

    testImplementation 'commons-io:commons-io:2.16.1'
    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:6.0.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.2'
}

application {
    mainClass.set('daislab.cspg.Main')
}

// Build a shadow/fat JAR so Python subprocess can run it standalone
shadowJar {
    archiveBaseName.set('cloudsimplus-gateway')
    archiveVersion.set(gatewayVersion)
    archiveClassifier.set('')
}

// Skip the docker plugin's image building - we build it manually
// to avoid conflicts between Main and GrpcServer main classes

// You can add environment variables either here or in the docker-compose.yml
// dockerCreateDockerfile {
//     environmentVariable 'JAVA_OPTS',
//         '-XX:+UnlockExperimentalVMOptions ' +
//         '-XX:+UseCGroupMemoryLimitForHeap ' +
//         '-XX:+HeapDumpOnOutOfMemoryError ' +
//         '-XX:HeapDumpPath=/external'
// }

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
